# weather-spotify

./: .cache  .gitignore  README.md  setup.cfg
src/weatherpy/: algo.py  main.py  playlist.py  subset_sum_algo.py  test.py  weather.py
src/weatherpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py
